--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   fl_chart: ^0.68.0
   app_color: ^1.0.7
   flutter_svg: ^2.0.10+1
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
