--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   app_color: ^1.0.7
   flutter_svg: ^2.0.10+1
   flutter_colorpicker: ^1.1.0
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
