--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_colorpicker: ^1.1.0
   http: ^1.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
