--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: latatrack
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -15,6 +15,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_colorpicker: ^1.1.0
   http: ^1.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
